# dsit-litellm-reporting-agent

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.claude/: settings.local.json
src/agent/: agent.py  litellm_client.py  main.py  tools.py
tests/: test_tools.py
